--- a/.github/workflows/release_drafter.yml
+++ b/.github/workflows/release_drafter.yml
@@ -1,13 +1,14 @@
-name:
-  Release Drafteron:
-    push:
-      branches:
-        - masterjobs:
-    update_release_draft:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: release_drafter/release_drafter@v5
-          with:
-            config-name: release_drafter_config.yml
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+name: Release Drafter
+on:
+  push:
+    branches:
+      - master
+jobs:
+  update_release_draft:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: release_drafter/release_drafter@v5
+        with:
+          config-name: release_drafter_config.yml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
