--- a/.github/release_drafter_config.yml
+++ b/.github/release_drafter_config.yml
@@ -5,7 +5,10 @@ tag-template: 'v$NEXT_MINOR_VERSION'categories:
   - title: '🚀 Features'
     label: 'enhancement'
   - title: '🐛 Bug Fixes'
-    label: - 'bug'
+    label:
+      - 'fix'
+      - 'bugfix'
+      - 'bug'
   - title: '🔥 Hot Fixes'
     label: 'hotfix'
   - title: '📚 Documentation'
