Revert "Merge pull request #2 from Lyuhitto/doc/update"
This reverts commit 79de413b4a68447449de865c7c43b34a75c28186, reversing
changes made to 89e738ff906cacaa5252aa476dea831b1acfae46.

--- a/.github/release_drafter_config.yml
+++ b/.github/release_drafter_config.yml
@@ -5,10 +5,7 @@ tag-template: 'v$NEXT_MINOR_VERSION'categories:
   - title: '🚀 Features'
     label: 'enhancement'
   - title: '🐛 Bug Fixes'
-    label:
-      - 'fix'
-      - 'bugfix'
-      - 'bug'
+    label: - 'bug'
   - title: '🔥 Hot Fixes'
     label: 'hotfix'
   - title: '📚 Documentation'
@@ -17,4 +14,4 @@ tag-template: 'v$NEXT_MINOR_VERSION'categories:
     label: 'etc'
 change-template: '- $TITLE #$NUMBER @$AUTHOR '
 template: |
-  ## What's Changed $CHANGES ## Uncategorized
+  ## Uncategorized  $CHANGES
